k8s/application/1-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: delivery
  labels:
    app: delivery
spec:
  replicas: 1
  selector:
    matchLabels:
      app: delivery
  template:
    metadata:
      name: delivery
      labels:
        app: delivery
    spec:
      containers:
        - name:  delivery
#          image:  lfneves/delivery-mvp:1.0.1
          image: 566907801160.dkr.ecr.us-east-1.amazonaws.com/delivery-mvp:latest
          ports:
            - containerPort: 8099
          resources:
            requests:
              cpu: 400m
              memory: 500Mi
      imagePullSecrets:
        - name: secret-dockerhub
