k8s/application/2-service-load-balancer.yaml
apiVersion: v1
kind: Service
metadata:
  name: delivery-service
  labels:
    app: delivery
#  annotations:
#    kubernetes.io/ingress.class: alb
spec:
  selector:
    app: delivery
  type: LoadBalancer
  ports:
    - name: http
      port: 8099
      targetPort: 8099
      nodePort: 32000
      protocol: TCP
