k8s/application/4-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: delivery-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  ingressClassName: delivery-mvp
  rules:
    - host: "delivery-mvp.test"
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: delivery-service
                port:
                  number: 32000
